# scaffold

./: .gitignore  .pre-commit-config.yaml  CLEANUP.md  llms.txt  pyproject.toml  zensical.toml
.github/workflows/: ci.yml
.skills/scaffold/: SKILL.md
docs/: index.md
docs/explanation/: design.md  index.md
docs/how-to/: bulk-test.md  check-health.md  create-project.md  index.md  upgrade-project.md
docs/reference/: api.md  cli.md  index.md
docs/tutorials/: first-project.md  index.md
src/scaffold/: cli.py  core.py  models.py  storage.py  template_engine.py
src/scaffold/templates/base/: .github_workflows_ci.yml.j2  .gitignore.j2  .pre-commit-config.yaml.j2  README.md.j2  llms.txt.j2  pyproject.toml.j2  zensical.toml.j2
src/scaffold/templates/cli/: cli.py.j2  core.py.j2
src/scaffold/templates/package/: docs_index.md.j2
src/scaffold/templates/python/: SKILL.md.j2  core.py.j2  docs_index.md.j2  mcp_server.py.j2  test_cli.py.j2  test_core.py.j2
src/scaffold/templates/webapp/: base.html.j2  main.py.j2  routes.py.j2  test_main.py.j2
tests/: test_bulk_improvements.py  test_caching.py  test_complete_flow.py  test_core.py  test_integration.py  test_storage.py  test_template_engine.py
