[project]
name = "scaffold"
version = "0.1.0"
description = "Scaffold new Python projects with opinionated defaults"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Ben O'Mahony"}
]
license = {text = "MIT"}
dependencies = [
    "typer>=0.12.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-examples>=0.0.10",
    "pytest-xdist>=3.5.0",
    "ruff>=0.3.0",
    "basedpyright>=1.10.0",
    "pre-commit>=3.6.0",
    "vulture>=2.11",
    "bandit>=1.7.0",
    "deptry>=0.12.0",
    "cliqa>=0.1.0",
]

[project.scripts]
scaffold = "scaffold.cli:app"
sc = "scaffold.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-markers"]
markers = [
    "unit: Fast unit tests (no subprocess, can run in parallel with -n auto)",
    "integration: Slow integration tests (subprocess, run sequentially)",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B404", "B603", "B606", "B607", "B701"]

[tool.basedpyright]
include = ["src/scaffold"]
typeCheckingMode = "standard"

[tool.deptry]
extend_exclude = ["tests"]

[tool.deptry.per_rule_ignores]
DEP001 = ["scaffold"]
DEP002 = ["pytest", "pytest-examples", "pytest-xdist", "ruff", "basedpyright", "pre-commit", "vulture", "bandit", "deptry", "cliqa"]
DEP003 = ["scaffold"]
